src/test/ui/consts/issue-52432.stderr
error[E0697]: closures cannot be static
  --> $DIR/issue-52432.rs:4:12
   |
LL |     [(); &(static |x| {}) as *const _ as usize];
   |            ^^^^^^^^^^

error[E0697]: closures cannot be static
  --> $DIR/issue-52432.rs:6:12
   |
LL |     [(); &(static || {}) as *const _ as usize];
   |            ^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-52432.rs:6:10
   |
LL |     [(); &(static || {}) as *const _ as usize];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ "pointer-to-integer cast" needs an rfc before being allowed inside constants

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0080, E0697.
For more information about an error, try `rustc --explain E0080`.
